[package]
name = "libafl_extra"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crc32fast = "^1.0"
libafl = { git = "https://github.com/aflplusplus/libafl", branch = "main", version = "^0.10" }
log = "^0.4"
serde = { version = "^1.0", features = ["derive"] }
