[package]
name = "libafl_extra"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/novafacing/libafl_extra"
description = "Extra niche components for LibAFL"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

# By default, we include no extra components and depend on neither the libafl-crates or libafl-git
# version of LibAFL
default = []

# Feature-specified crate or git LibAFL dependency
libafl_git = ["libafl-git"]
libafl_crates = ["libafl-crates"]

# Actual Features
map_hashing_observer = ["serde", "crc32fast", "log"]

[dependencies]
crc32fast = { version = "^1.0", optional = true }
libafl-git = { package = "libafl", git = "https://github.com/aflplusplus/libafl", branch = "main", version = "*", optional = true }
libafl-crates = { package = "libafl", version = "*", optional = true }
log = { version = "^0.4", optional = true }
serde = { version = "^1.0", features = ["derive"], optional = true }
